Bug 426155 - Checking and un-checking "Use workspace layout" leaves apply button active
Summary: Checking and un-checking "Use workspace layout" leaves apply button active
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_lookandfeel (other bugs)
Version First Reported In: 5.19.4
Platform: Other Other
: LO minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-03 18:44 UTC by postix
Modified: 2021-05-27 18:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2020-09-03 18:44:51 UTC
SUMMARY


STEPS TO REPRODUCE
1. Go to global design
2. Check "Use workspace layout of the design"
3. Uncheck it again

OBSERVED RESULT

Apply button stays active


EXPECTED RESULT

If nothing has changed, there's nothing to apply.


SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.73.0
Qt Version: 5.15.0
Comment 1 Nate Graham 2020-09-08 20:03:12 UTC
Same as Bug 426155 then, no?
Comment 2 Nate Graham 2020-09-08 20:05:08 UTC
OOps
Comment 3 Bug Janitor Service 2021-05-27 16:34:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/896
Comment 4 Cyril Rossi 2021-05-27 18:40:53 UTC
Git commit 90d995fc4753bd3bf5f531f6ae7b044ae1d69ec2 by Cyril Rossi.
Committed on 27/05/2021 at 16:27.
Pushed by ngraham into branch 'master'.

KCM LookAndFeel manage state of reset layout checkbox

M  +16   -3    kcms/lookandfeel/kcm.cpp
M  +3    -0    kcms/lookandfeel/kcm.h
M  +1    -1    kcms/lookandfeel/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-workspace/commit/90d995fc4753bd3bf5f531f6ae7b044ae1d69ec2
Comment 5 Nate Graham 2021-05-27 18:42:19 UTC
Git commit 87b9eef3dab82c23af6feaa4cbeaec189fd15581 by Nate Graham, on behalf of Cyril Rossi.
Committed on 27/05/2021 at 18:42.
Pushed by ngraham into branch 'Plasma/5.22'.

KCM LookAndFeel manage state of reset layout checkbox


(cherry picked from commit 90d995fc4753bd3bf5f531f6ae7b044ae1d69ec2)

M  +16   -3    kcms/lookandfeel/kcm.cpp
M  +3    -0    kcms/lookandfeel/kcm.h
M  +1    -1    kcms/lookandfeel/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-workspace/commit/87b9eef3dab82c23af6feaa4cbeaec189fd15581