KCM LookAndFeel manage state of reset layout checkbox

BUG: 426155